syntax = "proto3";

package theqrl.qrl.v1alpha1;

import "google/protobuf/descriptor.proto";
import "proto/qrl/ext/options.proto";

option csharp_namespace = "TheQRL.QRL.V1alpha1";
option go_package = "github.com/theQRL/qrysm/proto/qrysm/v1alpha1;qrl";
option java_multiple_files = true;
option java_outer_classname = "P2PMessagesProto";
option java_package = "org.theqrl.qrl.v1alpha1";
option php_namespace = "TheQRL\\QRL\\v1alpha1";

message Status {
  bytes fork_digest = 1 [(theqrl.qrl.ext.ssz_size) = "4"];
  bytes finalized_root = 2 [(theqrl.qrl.ext.ssz_size) = "32"];
  uint64 finalized_epoch = 3 [(theqrl.qrl.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.Epoch"];
  bytes head_root = 4 [(theqrl.qrl.ext.ssz_size) = "32"];
  uint64 head_slot = 5 [(theqrl.qrl.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.Slot"];
}

message BeaconBlocksByRangeRequest {
  uint64 start_slot = 1 [(theqrl.qrl.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.Slot"];
  uint64 count = 2;
  uint64 step = 3;
}

message QNRForkID {
  bytes current_fork_digest = 1 [(theqrl.qrl.ext.ssz_size) = "4"];
  bytes next_fork_version = 2 [(theqrl.qrl.ext.ssz_size) = "4"];
  uint64 next_fork_epoch = 3 [(theqrl.qrl.ext.cast_type) = "github.com/theQRL/qrysm/consensus-types/primitives.Epoch"];
}

/*
 Spec Definition:
 MetaData
 (
 seq_number: uint64
 attnets: Bitvector[ATTESTATION_SUBNET_COUNT]
 )
*/
message MetaDataV1 {
  uint64 seq_number = 1;
  bytes attnets = 2 [(theqrl.qrl.ext.ssz_size) = "8", (theqrl.qrl.ext.cast_type) = "github.com/theQRL/go-bitfield.Bitvector64"];
  bytes syncnets = 3 [(theqrl.qrl.ext.ssz_size) = "1", (theqrl.qrl.ext.cast_type) = "github.com/theQRL/go-bitfield.Bitvector4"];
}
